@startuml
'https://plantuml.com/class-diagram

hide methods
left to right direction
skinparam classAttributeIconSize 0

class Company {
-designation
}


class Ship {
-mmsiCode
-name
-imoCode
-numberEnergyGenerators
-generatorPower
-callSign
-vesselType
-length
-width
-capacity
-draft
}


class Ports {
-identification
-name
}


class Employee {
-name
}


class Country {
-name
-continent
}

class PlaceLocation {
-latitude
-longitude
}



Company "1"--"1..*" Employee: has >
Company "1"--"1..*" Ship: has >



Ports "1" --- "1" PlaceLocation : located at >
PlaceLocation "*" --- "1" Country : placed >



Ship "0..*"---"1" Ports: anchor in>



@enduml